--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
 
             <div class="mb-5">
                 <h3 class="text-center mb-4">
-                    <i class="bi bi-lightbulb"></i> Consejos
+                    <i class="bi bi-lightbulb"></i> Recomendaciones
                 </h3>
 
                 <!-- Accordion de Recomendaciones -->
@@ -84,33 +84,25 @@
                                 <strong class="ms-2">Antes de la cita</strong>
                             </button>
                         </h2>
-                        <div id="collapseAntesRecomendaciones" class="accordion-collapse collapse"
+                        <div id="collapseAntesRecomendaciones" class="accordion-collapse collapse show"
                             data-bs-parent="#accordionConsejos">
                             <div class="accordion-body">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
                                         <i class="bi bi-tooth"></i>
-                                        <strong>Cepíllate los dientes</strong> al menos dos veces al día con una pasta
-                                        dental con flúor.
+                                        <strong>Cepíllate los dientes</strong> suavemente antes de acudir.
                                     </li>
                                     <li class="list-group-item">
                                         <i class="bi bi-dash-circle"></i>
-                                        <strong>Usa hilo dental</strong> diariamente para eliminar la placa entre los
-                                        dientes.
+                                        <strong>Avisa</strong> si tienes sensibilidad dental o ansiedad.
                                     </li>
                                     <li class="list-group-item">
                                         <i class="bi bi-cup-straw"></i>
-                                        <strong>Limita el consumo</strong> de alimentos y bebidas azucaradas.
+                                        <strong>Evita</strong> café, tabaco o vino tinto ese día.
                                     </li>
                                     <li class="list-group-item">
                                         <i class="bi bi-hospital"></i>
-                                        <strong>Visita regularmente</strong> a tu dentista para chequeos y limpiezas
-                                        profesionales.
-                                    </li>
-                                    <li class="list-group-item">
-                                        <i class="bi bi-exclamation-circle"></i>
-                                        <strong>Evita el tabaco</strong>, ya que puede causar enfermedades de las encías y
-                                        cáncer oral.
+                                        <strong>Informa al dentista</strong> si tomas medicación o tienes alguna condición médica.
                                     </li>
                                 </ul>
                             </div>
